--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "aluraplay-request",
-  "version": "1.0.0",
-  "description": "<p align=\\\"center\\\"> <img src=\\\"https://imgur.com/J3hD21O.png\\\" alt=\\\"Javascript: criando requisições\\\"> </p>\"",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \\\"Error: no test specified\\\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AndressaDaCosta/aluraplay-request.git"
-  },
-  "author": "AndressaDaCosta",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AndressaDaCosta/aluraplay-request/issues"
-  },
-  "homepage": "https://github.com/AndressaDaCosta/aluraplay-request#readme"
+	"name": "aluraplay-request",
+	"version": "1.0.0",
+	"description": "<p align=\"center\"> <img src=\"https://imgur.com/J3hD21O.png\" alt=\"Javascript: criando requisições\"> </p>",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/AndressaDaCosta/aluraplay-request.git"
+	},
+	"author": "AndressaDaCosta",
+	"license": "ISC",
+	"bugs": {
+		"url": "https://github.com/AndressaDaCosta/aluraplay-request/issues"
+	},
+	"homepage": "https://github.com/AndressaDaCosta/aluraplay-request#readme"
 }
